--- a/main.html
+++ b/main.html
@@ -10,6 +10,20 @@
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
+<header >
+	<h1>Semantic Navbar and Images</h1>
+	<nav>
+		<ul>
+			<li> <a href="#home">Home</a> </li>
+			<li> <a href="#contact-us">Contact us</a> </li>
+			<li> <a href="#about-us">About us</a> </li>
+		</ul>
+	</nav>
+</header>
+
+	<img title "image 1" alt ="123"src="https://picsum.photos/id/123/200/300"></a> 
+	<img title "image 2" alt ="124"src="https://picsum.photos/id/124/200/300"></a> 
+	<img title "image 2" alt ="125"src="https://picsum.photos/id/125/200/300"></a>
 
 </body>
 
