--- a/main.html
+++ b/main.html
@@ -20,10 +20,12 @@
 		</ul>
 	</nav>
 </header>
-
-	<img title "image 1" alt ="123"src="https://picsum.photos/id/123/200/300"></a> 
-	<img title "image 2" alt ="124"src="https://picsum.photos/id/124/200/300"></a> 
-	<img title "image 2" alt ="125"src="https://picsum.photos/id/125/200/300"></a>
+<h1>
+	3 random images
+</h1>
+	<img title "image 1" alt ="Random image"src="https://picsum.photos/id/123/200/300"></a> 
+	<img title "image 2" alt ="Random image"src="https://picsum.photos/id/124/200/300"></a> 
+	<img title "image 2" alt ="Random image"src="https://picsum.photos/id/125/200/300"></a>
 
 </body>
 
